--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <title>Lung Cancer Detection</title>
   <link rel="stylesheet" href="/static/style.css">
 </head>
@@ -25,7 +26,7 @@
     {% endif %}
 
     <div class="info-section">
-      <br><br>
+      <br>
       <h2>Model & Dataset Information</h2>
       <p><strong>Model:</strong> Convolutional Neural Network (CNN)</p>
       <p><strong>Dataset:</strong> IQ-OTH/NCCD lung cancer dataset</p>
